[project]
name = "unlimited-code"
version = "2.0.1"
description = "Console AI coding agent powered by Unlimited AI"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.50.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"